<resources>
    <string name="app_name">拼图</string>
    <string name="fly_url">http://www.curryone.cn/2018/10/29/PUZZLE/</string>
    <string name="success_title">恭喜您，完成了这幅拼图！</string>
    <string name="s_continue">继续</string>
    <string name="s_next">下一关</string>
    <string name="stepcount">步数　</string>
    <string name="used">用了　</string>
    <string name="used_time">用时　</string>
    <string name="step">步</string>
    <string name="sel_image_bg">选择拼图背景</string>
    <string name="custom">自定义</string>
    <string name="restore_def">恢复默认</string>
    <string name="restore_def_all">全部恢复</string>
    <string name="restore_confirm">确定恢复？</string>
    <string name="author">小组成员：何沁洋 杨毅 郭浩 贺嘉琪</string>
    <string name="access_web">查看设计文档</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="clear">清空</string>
    <string name="s_minute">　分</string>
    <string name="s_second">　秒</string>
    <string name="save_score">保存成绩</string>
    <string name="createfile_failed">"创建文件失败"</string>
    <string name="restart">重玩</string>
    <string name="settings">设置</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="ranking">排名</string>


</resources>
